# enac-it4r-repo-python

./: README.md  cookiecutter.json  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.yaml
.github/workflows/: code_quality.yml  tests.yml
docs/: README.md  README.rst
docs/source/: ci.md  code_quality.md  conf.py  index.rst  installation.md  installation.rst  project_name.rst
docs/source/api/: modules.rst
hooks/: post_gen_project.py
project_name/: hello.py
tests/: test_hello.py
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: code_quality.yml  tests.yml
{{cookiecutter.project_name}}/docs/source/: code_quality.md  documentation.rst  index.rst  installation.md  modules.rst
{{cookiecutter.project_name}}/tests/: test_hello.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: foo.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  Dockerfile  README.md  _config.yml  pyproject.toml  readthedocs.yml
{{cookiecutter.project_slug}}/.github/ISSUE_TEMPLATE/: feature_request.yaml
{{cookiecutter.project_slug}}/.github/workflows/: code_quality.yml  tests.yml
{{cookiecutter.project_slug}}/docs/source/: ci.md  code_quality.md  code_testing.md  conf.py  documentation.rst  index.rst  installation.md  modules.rst  {{cookiecutter.project_slug}}.rst
{{cookiecutter.project_slug}}/tests/: test_foo.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug.replace('-', '_')}}/: foo.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug.replace('-', '_')}}/notebooks/: template.ipynb
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: foo.py
